# sorcery-desktop

./: .dockerignore  .gitignore  .last-build-digest  AGENTS.md  CLAUDE.md  Cargo.toml  DEVELOPMENT.md  INSTALL.md  MIT-LICENSE  Makefile  README.md  URL-FORMATS.md  docker-compose.yml  install-dev.sh  install-local.sh  test-protocol.html
.claude/: settings.json  settings.local.json
.claude/hooks/: rebuild-on-changes.sh
dev/: distribution-notes.md  installers.md  srcuri-dialogs.md  srcuri-protocol-spec.md  unified-protocol-implementation-summary.md
dev/done/: branch-handling.md  branch-param.md  cli-implementation.md  github-linking.md  protocol-handler.md  protocol-registration.md  server-overview.md  srcuri-registration.md  unified-protocol.md  webserver.md  workspace-mru-spec.md  workspace-mru-usage.md
dev/product/: advantages.md  features.md  marketing-pitches.md  overview.md
dev/research/: business-strategy.md  click-to-open-catalog.md  github-gitlab-url-format-analysis.md  path-normalization.md  srcuri-excel.md  use-cases.md
dev/todo/: distribution.md
dev/url-patterns/: README.md  gitea-pr-extraction.md  gitea.yaml  gitlab.yaml  open-dialog.md  sourcegraph.yaml  teamcity.yaml
public/: clone-dialog.html  debug-git-log.html  flash-message.html  index.html  non-workspace-confirm.html  revision-handler.html  settings.html  workspace-chooser.html
scripts/: build-macos-release.sh  quick-install-macos.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: create_editly_icon.py  create_icon.py  create_sorcery_icons.py  create_wand_icon.py
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/dispatcher/: mod.rs
src-tauri/src/editors/: jetbrains.rs  kate.rs  mod.rs  others.rs  registry.rs  terminal.rs  traits.rs  vscode.rs
src-tauri/src/editors/terminal/: emacs.rs  kakoune.rs  micro.rs  mod.rs  nano.rs  neovim.rs  terminal_detector.rs  vim.rs
src-tauri/src/git_command_log/: mod.rs
src-tauri/src/path_validator/: mod.rs
src-tauri/src/protocol_handler/: git.rs  matcher.rs  mod.rs  parser.rs
src-tauri/src/protocol_registration/: mod.rs
src-tauri/src/settings/: discovery.rs  manager.rs  mod.rs  models.rs
src-tauri/src/tracker/: detector.rs  mod.rs
src-tauri/src/workspace_mru/: fs_signal.rs  git_signals.rs  mod.rs  models.rs  probe.rs  process.rs
src-tauri/tests/: editor_launch_tests.rs  protocol_handler_tests.rs
srcuri-core/: Cargo.toml  README.md
srcuri-core/src/: lib.rs  parser.rs  types.rs
tasks/: distribution-cicd.md  first-run-setup.md  git-history-cleanup.md
tests/: README.md
tests/docker/: Dockerfile  README-PROTOCOL-TESTS.md  run-editor-tests.sh  run-protocol-tests.sh  run-tests.sh
