[package]
name = "hypredit"
version = "0.1.0"
description = "Cross-platform hyper-linker for editors and IDEs"
authors = ["Eric Beland"]
license = "MIT"
repository = "https://github.com/ebeland/hypredit"
edition = "2021"

[[bin]]
name = "hypredit"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = ["tray-icon", "protocol-asset"] }
tauri-plugin-deep-link = "2.0.0"
tauri-plugin-shell = "2.0.0"
tauri-plugin-dialog = "2.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1.40", features = ["full"] }
anyhow = "1.0"
tracing = "0.1"
dirs = "5.0"
shellexpand = "3.1"
